# Dissertation_debugger

./: Cargo.toml  README.md
.github/: dependabot.yml
demo/ctags/in/: test.c
libs_vendor/imgui-filedialog-rs/: Cargo.toml
libs_vendor/imgui-filedialog-rs/imgui-filedialog-examples/: Cargo.toml
libs_vendor/imgui-filedialog-rs/imgui-filedialog-sys/: Cargo.toml
libs_vendor/imgui-filedialog-rs/imgui-filedialog-sys-bindgen/: Cargo.toml
libs_vendor/imgui-memory-editor-rs/: Cargo.toml
libs_vendor/imgui-memory-editor-rs/imgui-memory-editor-sys/: Cargo.toml
libs_vendor/mach/src/: mach_init.rs  task.rs
ptrace/: Cargo.toml
ptrace/src/: lib.rs  process.rs
run/c_test/: a.out  test.c
run/malloc_test/: test.c
run/thread_test/: test.c
src/: breakpoints.rs  child_process.rs  common_binary_file.rs  controls.rs  debugger_state.rs  debugger_ui.rs  debugging_client.rs  debugging_info.rs  disassemble.rs  elf.rs  elf_info.rs  main.rs  memory_map.rs  memory_view.rs  registers.rs  stack.rs  syscall.rs  ui.rs
workspace/: .gitignore  Cargo.toml
workspace/debugger_core/: Cargo.toml
workspace/debugger_core/src/: common_binary_file.rs  debugger_state.rs  lib.rs  linux_ptrace_debugging_client.rs  mac_debugging_client.rs  test_debugger_state.rs  types.rs  windows_debugging_client.rs
workspace/debugger_ui/: Cargo.toml
workspace/debugger_ui/src/: breakpoints.rs  call_stack.rs  child_process.rs  controls.rs  debugger_state.rs  debugger_ui.rs  debugging_client.rs  debugging_info.rs  disassemble.rs  elf.rs  elf_info.rs  main.rs  memory_map.rs  memory_view.rs  output_console.rs  registers.rs  resources.rs  syscall.rs  ui.rs
workspace/linux_fd_info/: Cargo.toml
workspace/linux_fd_info/src/: lib.rs  test.rs
workspace/linux_memory_map/: Cargo.toml
workspace/linux_memory_map/src/: lib.rs  tests.rs
workspace/ptrace/: Cargo.toml
workspace/ptrace/src/: breakpoint.rs  event_debugger.rs  lib.rs  process.rs  types.rs
workspace/run/asm_test/: test  test.S
workspace/run/c_test/: a.out
workspace/run/dwarf_test/: test  test.c
workspace/run/loop_test/: loop  test.c
workspace/run/malloc_test/: a.out  linux_arm64_malloc  macos_aarch64_malloc  macos_amd64_malloc  malloc_aarch64  test.c
workspace/run/thread_test/: a.out  thread
workspace/run/tight_loop_test/: test.c
workspace/run/tutorialspoint_gdb_debugging_ex_1/: crash
workspace/run/tutorialspoint_gdb_debugging_ex_2/: crash
