[package]
name = "debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
glium = "0.29.0"
image ="0.23.12"
imgui = "0.7.0"
imgui-glium-renderer = "0.7.0"
imgui-winit-support ="0.7.0"
#include_dir = "0.6.0"
#rodio = "0.13.0"
#chrono = "0.4.19"

iced-x86 = "1.15.0"

gimli = "0.26.1"
fallible-iterator = "0.2.0"

[target.'cfg(unix)'.dependencies]
ptrace = { path = "./ptrace", features = ["breakpoints"]}
libc = "0.2.108"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.29.0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security"]}
