[package]
name = "debugger_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.108"
crossbeam-channel = "0.5.1"
exe = "0.4.5"
goblin = { version = "0.5.1", default-features=false, features=["endian_fd", "elf32", "elf64", "std"]}
linux_memory_map = { path = "../linux_memory_map" }

[target.'cfg(target_os = "linux")'.dependencies]
ptrace = { path = "../ptrace", features = ["breakpoints", "child_processes"]}
unwind = {version = "0.4.0", features=["ptrace"]}

[target.'cfg(target_os = "macos")'.dependencies]
mach = { path = "../../libs_vendor/mach" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.34.0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_Kernel", "Win32_System_SystemServices"]}
