[package]
name = "debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
glium = "0.30.2"
image ="0.24.1"
imgui = { version = "0.8.0", features = ["tables-api"]}
imgui-glium-renderer = "0.8.0"
imgui-winit-support ="0.8.0"
imgui-filedialog = { path = "../../libs_vendor/imgui-filedialog-rs" }
imgui-memory-editor = { path = "../../libs_vendor/imgui-memory-editor-rs" }

iced-x86 = { version = "1.15.0", default-features=false, features=["std", "decoder", "intel"]}
clap = "4.0.9"
gimli = "0.26.1"
fallible-iterator = "0.2.0"
crossbeam-channel = "0.5.1"
goblin = { version = "0.5.1", default-features=false, features=["endian_fd", "elf32", "elf64", "std"]}

debugger_core = { path = "../debugger_core" }
linux_fd_info = { path = "../linux_fd_info" }
