[package]
name = "ptrace"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.121"
linux_memory_map = { path = "../linux_memory_map" }

[features]
default = []
breakpoints = []
snapshots = []
event_debugger = []